EventManagementProject/force-app/main/default/objects/Registration__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <label>Attendee Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>