EventManagementProject/force-app/main/default/objects/Registration__c/fields/EventID__c.field-meta.xml
<CustomField>
    <fullName>EventID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>EventID</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>