EventManagementProject/force-app/main/default/objects/Registration__c/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <label>Master</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Registrations (Master)</relationshipLabel>
    <relationshipName>Registrations1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>